EdgeSplit at Split Angle: 0 doesn't split flat faces #58220

Closed
opened 2018-11-29 22:59:25 +01:00 by Alexander Otto · 5 comments

System Information
Operating system: Windows 10 x64
Graphics card: Nvidia 980

Blender Version
Broken: 2018-11-29 15:57, 26d5a3625e, blender2.8

Short description of error
EdgeSplit Modifier doesn't produce separate faces if Split Angle is set to 0 and the mesh (or part of) is a flat object.

For example: Create a grid object with subdivisions greater than 1 and add an EdgeSplit modifier with Split Angle set to 0. Splitting the mesh now to loose parts or working with a Smooth modifier shows that the modifier didn't produce the desired effect.edgesplit_broken.PNG

**System Information** Operating system: Windows 10 x64 Graphics card: Nvidia 980 **Blender Version** Broken: 2018-11-29 15:57, 26d5a3625ed, blender2.8 **Short description of error** EdgeSplit Modifier doesn't produce separate faces if Split Angle is set to 0 and the mesh (or part of) is a flat object. For example: Create a grid object with subdivisions greater than 1 and add an EdgeSplit modifier with Split Angle set to 0. Splitting the mesh now to loose parts or working with a Smooth modifier shows that the modifier didn't produce the desired effect.![edgesplit_broken.PNG](https://archive.blender.org/developer/F5760292/edgesplit_broken.PNG)
Author

Added subscriber: @AlexanderOtto

Added subscriber: @AlexanderOtto

This issue was referenced by 6330b715ef

This issue was referenced by 6330b715efd32ade93161c815c60e55cc816a7a9

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2018-12-04 10:49:39 +01:00

In fact, we need special handling for both limit cases (180° == no split by angle, and 0° == split on all edges).

In fact, we need special handling for both limit cases (180° == no split by angle, and 0° == split on all edges).

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58220
No description provided.