Fix T58220: EdgeSplit at Split Angle: 0 doesn't split flat faces.

Add special handling for both edge cases (:p):
* 180° is same as no splitting by angle;
* 0° is same as split on all edges unconditionnaly.

In both cases we can also avoid computing poly normals.